:test_tube: [JIRA-S12P11B106-148] Test: stable_diffusion 이미지 스타일 별 모델 주석 추가

--- a/AI/test/image_gen/stable_diffusion/stable_diffusion.ipynb
+++ b/AI/test/image_gen/stable_diffusion/stable_diffusion.ipynb
@@ -37,6 +37,46 @@
     "# 모델 ID (Hugging Face 경로, 또는 로컬에 다운로드한 모델 경로 사용)\n",
     "model_id = \"cagliostrolab/animagine-xl-3.0\"\n",
     "\n",
+    "# # retro\n",
+    "# model_id = \"coder119/Vectorartz_Diffusion\"\n",
+    "# model_id = \"stablediffusionapi/samdoesarts-ultmerge\"\n",
+    "# raw_prompt = \"\"\"\n",
+    "# Prompt: ((masterpiece)), ((best quality)), retro-style illustration, vintage poster, old-school print, ((golden flying croaker fish)), vibrant color, grainy texture, 1980s aesthetic, faded colors, hand-drawn lines, soft shading, limited color palette, surreal atmosphere\n",
+    "# Negative prompt: (worst quality, low quality:1.2), blurry, distorted, photorealistic, 3D render, neon, modern elements, overly detailed  \n",
+    "# \"\"\"\n",
+    "\n",
+    "# # realism\n",
+    "# model_id = \"SG161222/Realistic_Vision_V6.0_B1_noVAE\"\n",
+    "# model_id = \"digiplay/Photon_v1\"\n",
+    "# raw_prompt = \"\"\"\n",
+    "# Prompt: ((masterpiece)), ((best quality)), photorealistic, 8k ultra-detailed, hyper-realistic golden croaker fish, flying in the sky, shimmering golden scales, realistic lighting, soft reflections, cinematic shot, sky background, soft clouds, DSLR photography, natural light  \n",
+    "# Negative prompt: (worst quality, low quality:1.2), blurry, noisy, cartoon, painting, illustration, extra limbs, distorted shape\n",
+    "# \"\"\"\n",
+    "\n",
+    "# # comics\n",
+    "# model_id = \"SanDiegoDude/InkPunk768\"\n",
+    "# model_id = \"daftstout/DDicon\"\n",
+    "# raw_prompt = \"\"\"\n",
+    "# Prompt: ((masterpiece)), ((best quality)), comic book style, bold outlines, halftone shading, exaggerated perspective, ((golden flying croaker fish)), stylized ink drawing, vintage Marvel comics look, vibrant colors, strong contrast, dynamic pose, action shot  \n",
+    "# Negative prompt: (worst quality, low quality:1.2), blurry, photorealistic, watercolor, soft shadows\n",
+    "# \"\"\"\n",
+    "\n",
+    "# # cyberpunk\n",
+    "# model_id = \"ProGamerGov/Neon-Illustration-Diffusion\"\n",
+    "# model_id = \"stablediffusionapi/cetus-mix-whalefall2\"\n",
+    "# row_prompt = \"\"\"\n",
+    "# Prompt: ((masterpiece)), ((best quality)), cyberpunk art, futuristic neon city, glowing golden fish, ((golden flying croaker fish)), neon reflections, holographic effects, sci-fi environment, night sky, electric blue and purple tones, dynamic lighting, cinematic shot  \n",
+    "# Negative prompt: (worst quality, low quality:1.2), blurry, soft colors, monochrome, traditional painting\n",
+    "# \"\"\"\n",
+    "\n",
+    "# # watercolor\n",
+    "# model_id = \"gokaygokay/Flux-Watercolor-Strokes-LoRA\"\n",
+    "# model_id = \"KappaNeuro/makoto-shinkai-style\"\n",
+    "# raw_prompt = \"\"\"\n",
+    "# Prompt: ((masterpiece)), ((best quality)), watercolor painting, soft and delicate brushstrokes, dreamy atmosphere, ((golden flying croaker fish)), glowing golden scales, flowing in the sky, pastel color palette, light blue and white background, gentle lighting, airy composition  \n",
+    "# Negative prompt: (worst quality, low quality:1.2), blurry, overly saturated, sharp outlines, 3D render, photorealistic\n",
+    "# \"\"\"\n",
+    "\n",
     "# 모델 로드 (FP16 & GPU 사용)\n",
     "pipe = StableDiffusionXLPipeline.from_pretrained(\n",
     "    model_id, torch_dtype=torch.float16, safety_checker=None\n",
