--- a/AI/test/connect/resquest_ai_test.ipynb
+++ b/AI/test/connect/resquest_ai_test.ipynb
@@ -2,21 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jupyter API 접근 성공: {'version': '4.1.5'}\n"
+      "Jupyter API 접근 성공: {'message': 'Hello from Jupyter API'}\n"
      ]
     }
    ],
    "source": [
     "import requests\n",
     "\n",
-    "JUPYTER_URL = \"http://70.12.130.111/hub/api/\"\n",
+    "JUPYTER_URL = \"http://70.12.130.111:8889\"\n",
     "TOKEN = \"ad6667fd8dbe4e369be608dbfe152b03\"  # 위에서 확인한 Jupyter 토큰\n",
     "\n",
     "headers = {\n",
@@ -34,22 +34,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'output': 'result = 5 * 10'}\n"
+     ]
+    }
+   ],
    "source": [
     "data = {\n",
     "    \"code\": \"result = 5 * 10\"\n",
     "}\n",
     "\n",
-    "response = requests.post(JUPYTER_URL, json=data)\n",
+    "response = requests.post(JUPYTER_URL + \"/run\", json=data)\n",
     "print(response.json())\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "rag",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -63,9 +71,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
