🔨 [JIRA-S12P11B106-154] Refactor : dotenv 추가, 중요 값 env로 변경

--- a/AI/test/connect/resquest_ai_test.ipynb
+++ b/AI/test/connect/resquest_ai_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -15,9 +15,13 @@
    ],
    "source": [
     "import requests\n",
+    "import dotenv\n",
+    "import os\n",
     "\n",
-    "JUPYTER_URL = \"http://70.12.130.111:8889\"\n",
-    "TOKEN = \"ad6667fd8dbe4e369be608dbfe152b03\"  # 위에서 확인한 Jupyter 토큰\n",
+    "dotenv.load_dotenv()\n",
+    "\n",
+    "JUPYTER_URL = os.environ[\"JUPYTER_URL\"]\n",
+    "TOKEN = os.environ[\"TOKEN\"]\n",
     "\n",
     "headers = {\n",
     "    \"Authorization\": f\"token {TOKEN}\"\n",
@@ -34,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
